# herald

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
core/: listen_discord.py  send_discord.py  watch_runner.py
examples/launchd/: com.herald.brief.plist.example  com.herald.distill.plist.example  com.herald.listener.plist.example  com.herald.watch.plist.example
modules/x-briefs/prompts/: brief.md  distill.md
modules/x-briefs/watchers/: viral.py
prompts/: reply.md
